--- a/AngularWeb/src/lib/components/user/registration/registration.component.html
+++ b/AngularWeb/src/lib/components/user/registration/registration.component.html
@@ -2,8 +2,7 @@
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-12">
-        <h1>User Registration</h1>
-        <p><em>Using ASP.NET Core Web API and Angular</em></p>
+        <h1>Sign up</h1>
       </div>
   </div>
   <div class="col-md-12">
@@ -22,19 +21,17 @@
         <label for="fullname">Fullname</label>
         <input class="form-control" formControlName="fullname">
       </div>
-      <div formGroupName="Passwords">
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input class="form-control" type="password" formControlName="password">
-          <label class="text-danger" *ngIf="formRegistration.get('Passwords.password').touched && formRegistration.get('Passwords.password').errors?.required">This field is required</label>
-          <label class="text-danger" *ngIf="formRegistration.get('Passwords.password').touched && formRegistration.get('Passwords.password').errors?.minlength">Minimum 6 characters required</label>
-        </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirm Password</label>
-          <input class="form-control" type="password" formControlName="confirmPassword">
-          <label class="text-danger" *ngIf="formRegistration.get('Passwords.confirmPassword').touched && formRegistration.get('Passwords.confirmPassword').errors?.required">This field is required</label>
-          <label class="text-danger" *ngIf="formRegistration.get('Passwords.confirmPassword').touched && formRegistration.get('Passwords.confirmPassword').errors?.passwordMismatch">Confrim passwod does not match</label>
-        </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control" type="password" formControlName="password">
+        <label class="text-danger" *ngIf="formRegistration.get('password').touched && formRegistration.get('password').errors?.required">This field is required</label>
+        <label class="text-danger" *ngIf="formRegistration.get('password').touched && formRegistration.get('password').errors?.minlength">Minimum 6 characters required</label>
+      </div>
+      <div class="form-group">
+        <label for="confirmPassword">Confirm Password</label>
+        <input class="form-control" type="password" formControlName="confirmPassword">
+        <label class="text-danger" *ngIf="formRegistration.get('confirmPassword').touched && formRegistration.get('confirmPassword').errors?.required">This field is required</label>
+        <label class="text-danger" *ngIf="formRegistration.get('confirmPassword').touched && formRegistration.get('confirmPassword').errors?.passwordMismatch">Confrim passwod does not match</label>
       </div>
       <div class="row">
         <div class="col-md-12">
