--- a/AngularWeb/src/lib/components/user/user.component.html
+++ b/AngularWeb/src/lib/components/user/user.component.html
@@ -1,5 +1,15 @@
 <div class="container">
-  <div class="col-md-8 offset-md-2">
-    <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-md-1">
+      <a routerLink='/user/login' routerLinkActive='active'>Sign in</a>
+    </div>
+    <div class="col-md-1">
+      <a routerLink='/user/registration' routerLinkActive='active'>Sign up</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
