--- a/AngularWeb/src/lib/components/user/login/login.component.html
+++ b/AngularWeb/src/lib/components/user/login/login.component.html
@@ -8,15 +8,21 @@
   <div class="col-md-12">
     <form [formGroup]="formLogin" autocomplete="off" (submit)="onSubmit()">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input class="form-control" formControlName="username">
-        <label class="text-danger" *ngIf="formLogin.get('username').touched && formLogin.get('username').errors?.required">This field is required</label>
+        <mat-form-field hintLabel="Max 30 characters" appearance="fill">
+          <mat-label>Username</mat-label>
+          <input matInput formControlName="username" required>
+          <mat-hint align="end">{{formLogin.get('username').value?.length || 0}}/30</mat-hint>
+          <mat-error *ngIf="formLogin.get('username').errors?.required">You must enter a value</mat-error>
+        </mat-form-field>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input class="form-control" type="password" formControlName="password">
-        <label class="text-danger" *ngIf="formLogin.get('password').touched && formLogin.get('password').errors?.required">This field is required</label>
-        <label class="text-danger" *ngIf="formLogin.get('password').touched && formLogin.get('password').errors?.minlength">Minimum 6 characters required</label>
+        <mat-form-field hintLabel="Max 30 characters" appearance="fill">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" formControlName="password" required>
+          <mat-hint align="end">{{formLogin.get('password').value?.length || 0}}/30</mat-hint>
+          <mat-error *ngIf="formLogin.get('password').errors?.required">You must enter a value</mat-error>
+          <mat-error *ngIf="formLogin.get('password').errors?.minlength">You must enter at least 6 characters</mat-error>
+        </mat-form-field>
       </div>
       <div class="row">
         <div class="col-md-12">
