Implement add, edit and list

--- a/AngularWeb/src/lib/controls/top-navigation/top-navigation.component.html
+++ b/AngularWeb/src/lib/controls/top-navigation/top-navigation.component.html
@@ -9,6 +9,7 @@
       <div *ngIf="userLoggedIn">
         <a class="nav-item nav-link active" routerLink='/home' routerLinkActive='active'>Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" routerLink='/user/list' routerLinkActive='active'>User</a>
+        <a class="nav-item nav-link" routerLink='/city/list' routerLinkActive='active'>City</a>
       </div>
     </div>
   </div>
