--- a/AngularWeb/src/styles.css
+++ b/AngularWeb/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.dataTables_empty {
+  display: none;
+}
