--- a/AngularWeb/src/lib/components/city/city-list/city-list.component.html
+++ b/AngularWeb/src/lib/components/city/city-list/city-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <button type="submit" class="btn btn-primary" (click)="onAddCity()">Add City</button>
+    <button type="button" mat-button color="primary" (click)="onAddCity()">Add City</button>
   </div>
 </div>
 
