--- a/AngularWeb/src/lib/components/city/city-list/city-list.component.html
+++ b/AngularWeb/src/lib/components/city/city-list/city-list.component.html
@@ -42,7 +42,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onEdit(row.id)"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onEdit(row)"></tr>
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
