--- a/AngularWeb/src/lib/controls/top-navigation/top-navigation.component.html
+++ b/AngularWeb/src/lib/controls/top-navigation/top-navigation.component.html
@@ -1,16 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse">
     <div class="navbar-nav">
-      <div *ngIf="!userLoggedIn">
-        <a class="nav-item nav-link active" routerLink='/' routerLinkActive='active'>Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link active" routerLink='/user/login' routerLinkActive='active'>Sign in</a>
-        <a class="nav-item nav-link" routerLink='/user/registration' routerLinkActive='active'>Sign up</a>
-      </div>
-      <div *ngIf="userLoggedIn">
-        <a class="nav-item nav-link active" routerLink='/home' routerLinkActive='active'>Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" routerLink='/user/list' routerLinkActive='active'>User</a>
-        <a class="nav-item nav-link" routerLink='/city/list' routerLinkActive='active'>City</a>
-      </div>
+      <app-top-navigation-before-login *ngIf="!userLoggedIn"></app-top-navigation-before-login>
+      <app-top-navigation-after-login *ngIf="userLoggedIn"></app-top-navigation-after-login>
     </div>
   </div>
 </nav>
