--- a/AngularWeb/src/lib/components/user/login/login.component.html
+++ b/AngularWeb/src/lib/components/user/login/login.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <button type="submit" class="btn btn-primary" [disabled]="!formLogin.valid">Sign In</button>
+          <button type="submit" mat-raised-button color="primary" [disabled]="!formLogin.valid">Sign In</button>
         </div>
       </div>
     </form>
