--- a/AngularWeb/src/lib/components/user/registration/registration.component.html
+++ b/AngularWeb/src/lib/components/user/registration/registration.component.html
@@ -52,7 +52,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <button type="submit" class="btn btn-primary" [disabled]="!formRegistration.valid">Sign Up</button>
+          <button type="submit" mat-raised-button color="primary" [disabled]="!formRegistration.valid">Sign Up</button>
         </div>
       </div>
     </form>
